Fixing some collapsing styles in the calendar. Now it should be full responsive

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,7 +5,7 @@
   background-image: url(../assets/task-photo.jpeg);
   filter: blur(50px);
   -webkit-filter: blur(50px);
-  height: 100vh;
+  height: 100%;
   width: 100%;
   z-index: 1;
   background-repeat: no-repeat;
@@ -17,7 +17,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center; /* Centrar verticalmente */
-  height: 90vh; /* Ocupa toda la altura de la pantalla */
+  height: 100vh; /* Ocupa toda la altura de la pantalla */
   gap: 35px;
   z-index: 2; /* Asegurar que esté encima del fondo */
   position: relative; /* Posicionamiento relativo para mantenerlo encima del bg-wrapper */
@@ -27,14 +27,14 @@
 
 .task-wrapper {
   width: 40%;
-  height: 85%;
+  height: 100vh;
   background-color: rgb(255,255,255,0.5);
   border-radius: 10px;
   box-shadow: 10px 5px 5px grey;
 }
 
 .list-wrapper {
-  height: 80vh; /* Mantener la altura general del contenedor */
+  height: 100vh; /* Mantener la altura general del contenedor */
   width: 60%;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
@@ -56,17 +56,16 @@
     display: flex;
     flex-direction: column-reverse;
     padding: 0;
-    height: 100%;
+    height: fit-content;
   }
 
   .task-wrapper {
     width: 90%;
-    height: 70vh;
+    height: fit-content;
   }
 
   .list-wrapper {
     width: 93%;
-    min-height: 30vh;
-    max-height: 60vh;
+    height: fit-content;
   }
 }
