--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 30vh;
+  padding-bottom: 16px;
 }
 
 .react-calendar {
